--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+.signIn{
+
+    background-color: rgb(238, 85, 29);
+
+    text-align: center;
+    padding:10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+body{
+    background-color: aqua;
+}
+.form_components{
+    padding:118px;
+    margin-top: 40px;
+    margin-bottom: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBar{
+    width:50%;
+    border-radius:10px;
+    box-shadow: 2px 2px 6px grey;
 }
