--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,7 +1,6 @@
 .signIn{
 
     background-color: rgb(238, 85, 29);
-
     text-align: center;
     padding:10px;
     display: flex;
@@ -10,8 +9,19 @@
     align-items: center;
     
 }
+
+.intro{
+    background-color: white;
+    color:black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
 body{
-    background-color: aqua;
+    background: url("https://source.unsplash.com/1600x900/?books");
+}
+
+.logo{
+    color:red;
 }
 .form_components{
     padding:118px;
@@ -19,13 +29,32 @@ body{
     margin-bottom: 100px;
 }
 
+.navbar{
+    height: 70px;
+    width:100%;
+    margin-top:-5px;
+    float: left;
+    text-align: right;
+}
 .searchBar{
-    width:70%;
-    margin-left: 200px
+    display: fixed;
+    /* margin-top: 10px; */
+    width:100%;
+    /* margin-left: 200px; */
+    height:50px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+
+input{
+    text-align: center;
 }
 
 .card_body{
-    height:500px;
+    /* margin-top: 10px; */
+    background: url("https://source.unsplash.com/1600x900/?books");
+   
+    height:100vh;
     width:100%;
     padding:30px;
     display: flex;
@@ -41,17 +70,111 @@ body{
 }
 
 .content{
+    border-radius: 20px;
+    background: rgb(221, 210, 210);
+    color:black;
+    font-size: 25px;
+    font-weight: 600;
+    padding: 10px;
     text-align: center;
     width:40%;
     margin:40px;
+    margin-left: 200px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -10px 10px;
     
 }
+.Dbutton{
+    background: url("https://source.unsplash.com/1600x900/?books");
+    margin-left:50%;
+    height:100px;
+    margin-right:100px
+}
 .image{
+    margin-left: 10px;
     margin-top: 50px;
-    height:300px;
+    height:500px;
     width:auto;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.books_in_cart{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: aqua;
+    height:30%;
+    width:30%;
+    padding:30px;
+    margin:5px;
+}
+
+.books_recommended{
+    text-align: center;
+    background-color: aqua;
+    height:30%;
+    width:30%;
+    padding:30px;
+    margin:5px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.card{
+    background:none;
+}
+.wrapper{
+    overflow-x: hidden;
+    overflow-y: auto;    
+}
+
+.wrapper h1{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.wrapper p{
+    text-align: center;
+    margin-top: 7px;
+    font-weight: bold;
+}
+
+.wrapper .main{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.wrapper .form-container{
+    width: 500px;
+    height: 340px;
+    background-color: #424040;
+    color:white;
+    margin: 20px auto;
+    padding: 20px;   
+}
+
+.wrapper .form-container .btn{
+    width: 100%;   
+}
+
+.wrapper .view-container{
+    width: 600px;    
+    background-color: #e4e4e4;
+    margin: 20px auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.delete-btn{
+    color: red;
+    cursor: pointer;
+}
+
+tbody{
+    margin-top: 25px;
 }
 
